[package]
name = "wayne-manager"
version = "0.1.0"
authors = ["Kabir Kwatra <kabir@kwatra.me>"]
license = "AGPL-3.0-or-later"
publish = false
edition = "2018"

[dependencies]

[dependencies.serenity]
version = "0.8.6"
default-features = false
features = ["client", "model", "http", "rustls_backend", "cache"]
